clusters/pk3s/pve/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pve-1
  namespace: pve
  labels:
    kubernetes.io/service-name: pve
    endpointslice.kubernetes.io/managed-by: homelab-apps
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - 192.168.254.165
    conditions:
      ready: true
