clusters/pk3s/pve/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve
  namespace: pve
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8006
      targetPort: 8006
