clusters/pk3s/pve/ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve-http
  namespace: pve
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`pve.local`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: pve
          port: 8006
          scheme: https
          serversTransport: pve-tls
