clusters/pk3s/pve/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve
  namespace: pve
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`pve.local`)
      services:
        - name: pve
          port: 8006
          scheme: https
          serversTransport: pve-tls
